# Haskell-Fractals

./: .gitignore  Base.hs  ChangeLog.md  Compile cmd.txt  Haskell-Fractals.cabal  Main.hs  README.md
Core/: AdvConstants.hs  Colouring.hs  Constants.hs  CoordinateSystem.hs  CoreIO.hs  CoreSVG.hs  DataTypes.hs  Demos.hs  ExtraTransformations.hs  Main.hs  Mandelbrot.hs  Recursive.hs  Sandpiles.hs  ScreenSaver.hs  Shapes.hs  Utils.hs
Core/Mandlebrot/: CoordinateSystem.hs  Mandlebrot.hs
Lecture/: notes mk2.md  notes.md
